// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`from > from(-90) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-90
╠══════════════════════════════════════════════════╣ THEN RETURNS
-90
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS
0
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(45.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
45.5
╠══════════════════════════════════════════════════╣ THEN RETURNS
45.5
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(90) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
90
╠══════════════════════════════════════════════════╣ THEN RETURNS
90
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(180) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
180
╠══════════════════════════════════════════════════╣ THEN RETURNS
180
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(360) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
360
╠══════════════════════════════════════════════════╣ THEN RETURNS
360
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(null) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be finite, got: Infinity
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(null) 2`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be finite, got: -Infinity
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(null) 3`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be finite, got: NaN
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is("90") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"90"
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-90) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-90
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(45.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
45.5
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(90) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
90
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(180) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
180
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(360) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
360
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) 2`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) 3`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) 4`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
undefined
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-90) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-90
╠══════════════════════════════════════════════════╣ THEN RETURNS
-90
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS
0
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(45.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
45.5
╠══════════════════════════════════════════════════╣ THEN RETURNS
45.5
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(90) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
90
╠══════════════════════════════════════════════════╣ THEN RETURNS
90
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(180) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
180
╠══════════════════════════════════════════════════╣ THEN RETURNS
180
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(360) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
360
╠══════════════════════════════════════════════════╣ THEN RETURNS
360
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(null) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(null) 2`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(null) 3`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;
